--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,94 +1,29 @@
-body, html {
+html {
     background-color: black;
 }
 
-.firstSection-1 {
-    padding-left: 10%;
-    padding-right: 10%;
-    background-image:url(../images/gallery/background-img-gallery.jpg);
-    background-size:cover;
-    height: 200%;
-}
-
-.main-heading {
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    height: 100%;
-    padding: 170px;
-    
-}
-
-.main-title {
-    font-family:'Times New Roman', Times, serif;
-    font-weight: 100;
-    font-size: 59px;
+body, html {
     margin: 0;
     padding: 0;
-    text-transform: unset;
-    letter-spacing: 5px;
-    text-align: left;
-    
 }
 
-
-/***** header *****/
-
-.header {
-    padding: 0;
-    padding-top: 30px;
-    padding-bottom: 20px;
+.container {
+    margin: 25px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
 }
 
-.logo {
-    padding-right: 5%;
-    display: flex;
-    flex-direction: row;
-    text-decoration:none;
+img {
+    width: 250px;
+    height: 250px;
 }
 
-.logo-img {
-    width: 70px;
-    height: 40px;
-    padding: 0 5px 0 10px;
-}
-
-.title-top {
-    font-size: 27px;
-    font-family: 'PT Serif', serif;
-    color: white;
-    text-decoration:none;
-}
-
-.title-bottom {
-    font-size: 8px;
-    letter-spacing: 3px;
-    color: white;
-    line-height: 0px;
-}
-
-.title {
-    display: flex;
-    flex-direction: column;
-}
-
-.s1-heading {
-    font-size: 60px ;
-    font-family: 'Bitter', serif;
-    font-weight: 100;
-    text-align: left;
-    padding-top: 70%;
-}
-
-/***** navigation bar  *****/
-
-.navbar {
-    padding-left: 5%;
+.navigation {
+    align-content:end;
+    margin: 20px 20px 20px 100px;
+    padding: 10px;
+    text-align: center;
+    align-content: center; 
 }
 
 .list {
@@ -99,61 +34,32 @@ body, html {
     font-size: 18px;
 }
 
-.item-list {
-    text-decoration:none;
-    color: #ffffff;
- 
+li {
+    padding: 10px;
+    margin: 20px 20px 20px 100px;
 }
 
-.item {
-    padding: 0 1.5rem;
-}
 
-.item-list:hover {
-    text-decoration: underline;
+li a {
     color: white;
 }
 
-
-/**gallery**/
-body {
-    background-color: #000;
-}
-
-h1 {
-    font-family:'PT serif',serif;
-    text-transform: none;
-    font-size: 25px;
-    padding: 0;
-    margin-top: 15px; 
-    color: #fff;
-    text-align: center;
-    white-space:unset;
-    margin-bottom: 0;
-}
-
-.image {
+.grid_container div img {
+    height: 100% ;
     width: 100%;
-    height: 100%; 
 }
 
-.row{
-    margin-bottom: 50px;
+.grid_container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 100px;
+    margin-bottom: 100px;
 }
 
-.container{
-    margin-left: 10px;
-    max-width: 98%;
-    padding-top: 0%;
-}
-
-.col-4{
-    margin-bottom: 70px;
-    padding-right: 0%;
-    padding-left: 0%;
-}
-
-.mt-5{
-    margin-left: 10px;
-    max-width: 98%;
+.grid_container div div {
+    padding: 5px;
+    padding-top: 25px;
+    color: white;
+    text-align: center;
+    font-size: 25px;
 }
