--- a/css/gallery.css
+++ b/css/gallery.css
@@ -41,6 +41,12 @@ li {
 
 
 li a {
+    text-decoration:none;
+    color: white;
+}
+
+li:hover {
+    text-decoration: underline;
     color: white;
 }
 
