--- a/css/about.css
+++ b/css/about.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 } 
 .section-1{
-    background-image: url(../assets/about_page/about.jpg);
+    background-image: url(/images/about/about.jpg);
     height: 100vh;
     background-size: cover;
    
