--- a/css/gallery.css
+++ b/css/gallery.css
@@ -3,8 +3,9 @@ body, html {
 }
 
 .firstSection-1 {
-    padding-left: 10%;
+    padding-left: 5%;
     padding-right: 10%;
+    padding-top: 2%;
     background-image:url(../images/gallery/background-img-gallery.jpg);
     background-size:cover;
     height: 200%;
@@ -53,9 +54,8 @@ body, html {
 }
 
 .logo-img {
-    width: 70px;
-    height: 40px;
-    padding: 0 5px 0 10px;
+    width: 100px;
+    /* padding: 0 5px 0 10px; */
 }
 
 .title-top {
@@ -88,7 +88,8 @@ body, html {
 /***** navigation bar  *****/
 
 .navbar {
-    padding-left: 5%;
+    margin-left: 60px;
+    padding-left: 30px;
 }
 
 .list {
@@ -96,10 +97,10 @@ body, html {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-size: 18px;
 }
 
 .item-list {
+    padding: 10px;
     text-decoration:none;
     color: #ffffff;
  
@@ -132,10 +133,10 @@ h1 {
     margin-bottom: 0;
 }
 
-.image {
+/* .image {
     width: 100%;
     height: 100%; 
-}
+} */
 
 .row{
     margin-bottom: 50px;
