--- a/css/home.css
+++ b/css/home.css
@@ -20,6 +20,11 @@
     text-decoration: underline;
     color: seashell;
 }
+.container{
+    margin-left: 20px;
+    padding-right: 20px;
+    margin-right: 80px;
+}
 .main-container{
     display: flex;
     height: 100%;
