--- a/css/home.css
+++ b/css/home.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 } 
 .section-1{
-    background-image: url(/images/about/about.jpg);
+    background-image: url(/images/about/piotr-chrobot-6oUsyeYXgTg-unsplash.jpg);
     height: 100vh;
     background-size: cover;
    
