--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,35 @@
     margin-inline: 20px;
     padding: 10px;
 }
+
+
+/***** footer  *****/
+.footer{
+    background-color: #161f1e;
+    padding: 10% 0;
+}
+.lastSection{
+    display: flex;
+    justify-content: space-around;
+
+}
+.lastSection ul{
+    padding: 0;
+}
+.lastSection ul li{
+    color: #fff;
+    /* padding: 5px; */
+    list-style: none;
+    text-decoration: underline;
+}
+.lastSection ul li:hover{
+    font-size: 1.25rem;
+
+}
+.logo-img{
+    width:52px;
+}
+.footer p{
+    color: rgba(255, 255, 255, 0.575);
+}
+
