--- a/css/styles.css
+++ b/css/styles.css
@@ -8,3 +8,99 @@
     margin-inline: 20px;
     padding: 10px;
 }
+.menu-icon{
+    width: 18px;
+    height: 14px;
+    position: relative;
+    margin-top: 7px;
+}
+.menu-icon span{
+    display: inline-block;
+    background-color: #fff;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+}
+.menu-icon span:before{
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    top: -5px;
+    right: 0;
+    background-color: #fff;
+}
+.menu-icon span:after{
+    content: '';
+    width: 60%;
+    height: 2px;
+    position: absolute;
+    bottom: -5px;
+    right: 0;
+    background-color: #fff;
+}
+.nav-link{
+    color: seashell;
+    padding: 50px;
+}
+.nav-link:hover{
+    text-decoration: underline;
+    color: seashell;
+}
+/***hamburgermenu**/
+.inner-pages{
+    background-color: #111;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    transition: 1s;
+    transform: translateY(-100%);
+}
+.inner-pages.active{
+    transform: translateY(0%);
+}
+.inner-pages nav img{
+    width: 32px;
+
+}
+.inner-pages ul li{
+    font-family: 'PT serif',serif;
+    font-size: 48px;
+    color: #fff;
+    list-style-type: none;
+    text-align: center;
+}
+.inner-pages nav{
+    color: #fff;
+    padding: 30px 0;
+    position: absolute;
+    width:100%;
+    left: 0;
+    right: 0;
+
+}
+.inner-pages .list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    
+}
+.inner-pages .list a{
+    text-decoration: none;
+    color: #fff;
+}
+.inner-pages .list a:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.inner-pages .list a:visited{
+    color: #fff;
+    text-decoration: none;
+}
