--- a/css/contact.css
+++ b/css/contact.css
@@ -11,7 +11,7 @@
 
 }
 .section-1{
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../assets/contact/contact.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/contact/contact-bg.jpg');
     height: 75vh;
     background-repeat: no-repeat;
     background-size: cover;
@@ -105,7 +105,7 @@
 /* section-3 */
 
 .section-3 {
-    background-image: url(../assets/contact/contact-bg.jpg);
+    background-image: url(../images/contact/contact.jpg);
     width: 100%;
     height: 100%;
     padding: 10% 8%;
