--- a/css/home.css
+++ b/css/home.css
@@ -21,7 +21,7 @@
 }
 .container{
     margin-left: 20px;
-    padding-right: 20px;
+    /* padding-right: 20px; */
     margin-right: 80px;
 }
 .main-container{
