--- a/css/ourWorlds.css
+++ b/css/ourWorlds.css
@@ -80,5 +80,12 @@ body {
 }
 .gallery-margin{
     margin-bottom: 60px;
-
+    
 }
+
+.gallery-margin:hover{
+    /* box-shadow: 0 0 5px 5px white; */
+    transform: scale(1.1);
+}
+
+
