--- a/css/home.css
+++ b/css/home.css
@@ -20,9 +20,9 @@
     color: seashell;
 }
 .container{
-    margin-left: 20px;
-    padding-right: 20px;
-    margin-right: 80px;
+    /* margin-left: 20px; */
+    /* padding-right: 20px; */
+    /* margin-right: 80px; */
 }
 .main-container{
     display: flex;
