--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,160 +1,70 @@
-body, html {
-    background-color: black;
-}
-
-.firstSection-1 {
-    padding-left: 5%;
-    padding-right: 10%;
-    padding-top: 2%;
-    background-image:url(../images/gallery/background-img-gallery.jpg);
-    background-size:cover;
-    height: 200%;
-}
-
-.main-heading {
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    height: 100%;
-    padding: 170px;
-    
-}
-
-.main-title {
-    font-family:'Times New Roman', Times, serif;
-    font-weight: 100;
-    font-size: 59px;
-    margin: 0;
-    padding: 0;
-    text-transform: unset;
-    letter-spacing: 5px;
-    text-align: left;
-    
-}
-
-
-/***** header *****/
-
-.header {
-    padding: 0;
-    padding-top: 30px;
-    padding-bottom: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    padding-right: 5%;
-    display: flex;
-    flex-direction: row;
-    text-decoration:none;
-}
-
-.logo-img {
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+} 
+.section-1{
+    background-image: url(/images/gallery/background-img-gallery.jpg);
+    height: 75vh;
+    background-size: cover;
+    }
+.navbar-brand img{
     width: 100px;
-    /* padding: 0 5px 0 10px; */
 }
-
-.title-top {
-    font-size: 27px;
-    font-family: 'PT Serif', serif;
-    color: white;
-    text-decoration:none;
+.nav-link{
+    color: seashell;
+    padding: 50px;
+}   
+.nav-link:hover{
+    text-decoration: underline;
+    color: seashell;
 }
-
-.title-bottom {
-    font-size: 8px;
-    letter-spacing: 3px;
-    color: white;
-    line-height: 0px;
-}
-
-.title {
+.main-container{
     display: flex;
-    flex-direction: column;
-}
-
-.s1-heading {
-    font-size: 60px ;
-    font-family: 'Bitter', serif;
-    font-weight: 100;
-    text-align: left;
-    padding-top: 70%;
-}
-
-/***** navigation bar  *****/
-
-.navbar {
-    margin-left: 60px;
-    padding-left: 30px;
-}
-
-.list {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
+    height: 100%;
     align-items: center;
 }
-
-.item-list {
-    padding: 10px;
-    text-decoration:none;
-    color: #ffffff;
- 
+.main-container h1{
+    color:#fff;
+    font-size:70px;
+    font-family: 'PT serif', serif;
 }
 
-.item {
-    padding: 0 1.5rem;
-}
-
-.item-list:hover {
-    text-decoration: underline;
-    color: white;
-}
-
-
-/**gallery**/
 body {
     background-color: #000;
 }
 
-h1 {
-    font-family:'PT serif',serif;
-    text-transform: none;
-    font-size: 25px;
+.section-2 {
     padding: 0;
-    margin-top: 15px; 
-    color: #fff;
+    margin: 0;
+}
+
+.gallery-container {
+    display: flex;
+    flex-direction: column;
+    justify-content:stretch;
+}
+
+.gallery-item {
+    padding: 0%;
+    margin: 0%;
+}
+
+.gallery-content {
     text-align: center;
-    white-space:unset;
-    margin-bottom: 0;
 }
 
-/* .image {
+.gallery-content:hover {
+    transform: scale(1.1);
+}
+
+.img-fluid {
     width: 100%;
-    height: 100%; 
-} */
-
-.row{
-    margin-bottom: 50px;
+    height: auto;
 }
 
-.container{
-    margin-left: 10px;
+.gallery-caption {
+    color: #fff ;
     max-width: 98%;
-    padding-top: 0%;
-}
-
-.col-4{
-    margin-bottom: 70px;
-    padding-right: 0%;
-    padding-left: 0%;
-}
-
-.mt-5{
-    margin-left: 10px;
-    max-width: 98%;
+    margin-block: 15px;
 }
