--- a/css/contact.css
+++ b/css/contact.css
@@ -141,27 +141,14 @@
 /* section-4 */
 
 .section-4 {
-    padding: 7% 20%;
+    /* padding: 7% 20%; */
     background-color: #fff;
     text-align: center;
 }
-
-.inner-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: start;
-    /* padding: 5% 0; */
-}
-
-.first-box h3 {
-    
+.first-box h3 { 
     font-weight: 300;
     font-family: 'Montserrat', sans-serif;
     margin: 12% 0;
-}
-.second-box{
-    padding: 4% 0 2%;
 }
 .phone:hover, .mail-id:hover {
     border: none;
