--- a/css/home.css
+++ b/css/home.css
@@ -4,10 +4,20 @@
     box-sizing: border-box;
 } 
 .section-1{
-    background-image: url(/images/about/piotr-chrobot-6oUsyeYXgTg-unsplash.jpg);
+    /* background-image: url(/images/about/piotr-chrobot-6oUsyeYXgTg-unsplash.jpg); */
     height: 100vh;
     background-size: cover;
-    }
+    background-position:center;
+    position: relative;
+}
+.background-video{
+    min-width: 100%;
+    min-height: 100%;;
+    position: absolute;
+    z-index: -10;
+    margin-bottom: 100%;
+    overflow: hidden;
+}
 .navbar-brand img{
     width: 100px;
 }
@@ -64,3 +74,15 @@
     font-family: 'PT serif',serif;
 }
 
+
+@media (max-width: 481px) {
+    .section-1{
+        background-image: url(/images/about/piotr-chrobot-6oUsyeYXgTg-unsplash.jpg);
+        height: 75vh;
+        background-size: cover;
+    }
+
+    .background-video{
+        display: none;
+    }
+}
