--- a/css/ourWorlds.css
+++ b/css/ourWorlds.css
@@ -22,7 +22,7 @@
     height: 100%;
     align-items: center;
     margin-right: 20px;
-    padding-right: 90px;
+    padding-right: 95px;
 }
 
 /**one worlds**/
@@ -59,4 +59,10 @@ body {
 
 .gallery-margin:hover{
     transform: scale(1.1);;   
+}
+
+@media (max-width: 481px) {
+    .main-container{
+        padding-right: 0;
+    }
 }
