--- a/css/contact.css
+++ b/css/contact.css
@@ -248,7 +248,24 @@
     right: 0;
     background-color: #fff;
 } 
+.submit-btn {
+    font-family: 'PT serif',serif;
+    background-color: #161f1e;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 0 auto;
+    font-size: 16px;
+  }
 
-
-    
-
+#contactForm {
+    font-family: 'PT serif',serif;
+    background-color: #c8ccc8;
+    max-width: 600px;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 5px;
+}
