--- a/css/experiences.css
+++ b/css/experiences.css
@@ -24,6 +24,7 @@
     display: flex;
     height: 100%;
     align-items: center;
+    text-align: center;
     
 }
 .main-container h1{
@@ -65,6 +66,7 @@
     font-weight: 300;
     color: rgb(0, 0, 0);
     font-family: 'PT serif',serif;
+    text-align: center;
 }
 
 
@@ -75,5 +77,8 @@
         height: 50vh;
         background-size: cover;
         margin-bottom: 10px;
+    }
+    .main-content{
+        padding-left: 50px;
     }
 }
